# ps_migration_tools

./: .gitignore  404.html  LICENSE  README.md  index.html  migrate_content_demo.sh  mkdocs.yml  pyproject.toml  sitemap.xml  test.py
_archive/: endpoint_method_classes.py  get_delta.py  migrate_objects.py
_prototype/: create_users.ipynb  transfer_ownership.ipynb
cli/: __main__.py  _ux.py
config/: azuresynapse.toml  databricks.toml  falcon.toml  general.toml  googlebigquery.toml  redshift.toml  snowflake.toml  synapse.toml
demo_files/myfirstproject/config/: myfirstproject.toml
docs/: index.md
docs/migration-tools/: overview.md
docs/migration-tools/answers/: readme.md
docs/migration-tools/convert-ddls/: readme.md
docs/migration-tools/create-config/: readme.md
docs/migration-tools/deltas/: readme.md
docs/migration-tools/tags/: readme.md
docs/tutorial/: config.md  delta_migration.md  install.md  intro.md  metadata.md  remapping.md  validate.md
external_scripts/: parse_model.groovy  parse_model.sh
external_scripts/extract_metadata/: extract_falcon_metadata.sh  extract_snowflake_metadata.sql
migration-tools/overview/: index.html
migration_tools/: __init__.py  _client.py  _comparison_report.py  _connection_migrator copy.py  _connection_migrator.py  _ddl.py  _error_handling.py
search/: search_index.json
tests/: fixtures.py
tests/cli/: test_cli.py
tutorial/config/: index.html
tutorial/delta_migration/: index.html
tutorial/install/: index.html
tutorial/intro/: index.html
tutorial/remapping/: index.html
tutorial/validate/: index.html
(+33 files in other folders)
